Fix hover and inFocus clrs after adding sticky wrapper element., refactor z-index to all scroll relatable elements

--- a/src/assets/styles/cmps/SideBar.scss
+++ b/src/assets/styles/cmps/SideBar.scss
@@ -118,7 +118,7 @@
         height: calc(100% - 4rem);
         border-top-left-radius: 0.5rem;
         width: 40px;
-        z-index: 12;
+        z-index: 14;
     }
 
 }
