--- a/src/assets/styles/cmps/pulse/PulsePreview.scss
+++ b/src/assets/styles/cmps/pulse/PulsePreview.scss
@@ -5,14 +5,13 @@
     background-color: $clr-table-bg;
     height: $pulse-row-height;
     @include border(bottom);
-    // z-index: 0;
 
     &:hover {
         position: relative;
         background-color: $clr-pulse-hover;
         box-shadow: 4px 3px 6px -3px $clr-table-shadow;
         cursor: pointer;
-        z-index: 10;
+        z-index: 11;
 
         .label-picker-container {
             opacity: 0.8;
@@ -39,7 +38,7 @@
     .full-title-selector-container {
         display: flex;
         @include stickyHorizontalTable();
-        z-index: 9;
+        z-index: 10;
 
         &:hover {
             background-color: $clr-pulse-hover;
@@ -47,11 +46,12 @@
 
         &:focus-within {
             outline: 1px solid $clr-btn-blue;
+            background-color: $clr-btn-active-bg;
         }
     }
 
     &:focus-within {
-        z-index: 3;
+        z-index: 12;
         background-color: $clr-btn-active-bg;
     }
 }
